--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,6 @@ html {
 h1,
 h2 {
   color: white;
-  padding-left: 20px;
 }
 
 header {
@@ -34,6 +33,7 @@ header {
 .header-content {
   display: flex;
   justify-content: space-between;
+  padding-top: 20px;
 }
 
 h1 {
@@ -44,30 +44,36 @@ h1 {
   font-weight: bold;
 }
 
-h2 {
-  padding-bottom: 20px;
-  font-size: 2.2rem;
-}
-
 .beer {
-  font-size: 5rem;
+  font-size: 6rem;
 }
 
 .cocktail-title {
-  font-size: 7rem;
+  font-size: 8rem;
+}
+
+h2 {
+  padding-bottom: 20px;
+  font-size: 2.1rem;
+  font-family: Tahoma, "Segoe UI", Geneva, Verdana, sans-serif;
+  font-weight: 200;
+  text-transform: uppercase;
+  letter-spacing: 0.52rem;
+}
+
+.cocktail-glass-container {
+  height: 250px;
+  width: 280px;
+  margin-top: 20px;
+  justify-content: center;
 }
 
 .cocktail-glass {
   color: white;
-  font-size: 16rem;
-  box-shadow: 0 0 0 20px white;
-  margin: 20px;
-  padding: 20px;
+  font-size: 18rem;
+  box-shadow: 0 0 0 16px white;
+  padding: 25px;
   border-radius: 12px;
-}
-
-.cocktail-glass-container {
-  margin: 20px;
 }
 
 main {
@@ -110,7 +116,7 @@ button {
   width: 85%;
   height: 70%;
   border-radius: 25px;
-  font-size: 3rem;
+  font-size: 5rem;
   z-index: 2;
   cursor: pointer;
 }
@@ -160,6 +166,12 @@ img {
   padding-bottom: 20px;
 }
 
+.name,
+button {
+  font-family: "Anton", sans-serif;
+  text-transform: uppercase;
+}
+
 .name {
   font-size: 3rem;
 }
@@ -172,7 +184,8 @@ p {
 .ingredients,
 .glass,
 .instructions {
-  font-size: 2rem;
+  font-size: 2.2rem;
+  font-family: Tahoma, "Segoe UI", Geneva, Verdana, sans-serif;
 }
 
 .measures,
